# trackingdemo

./: CMakeLists.txt  README.md  loadxdma.sh  xdma-load.service
include/: idetector.h  nvrender.h
include/idetector/: config.h  types.h
src/: common.h  fusion.cpp  idetector.cpp  main.cpp  nvrender.cpp  tracker.cpp  tracker.h
src/idetector/: postprocess.cpp
